# tinia

./: .gitignore  CMakeLists.txt  CNAME  Doxyfile  README.md  README.txt  Tinia.sln  TiniaConfig.cmake.in  TiniaConfigVersion.cmake.in  index.html  params.json
examples/auto_proxy_test/: APCJob.cpp  APCJob.hpp  CMakeLists.txt  cloud_main.cpp  main.cpp
examples/changerestrictions/: CMakeLists.txt  RestrictionsJob.cpp  RestrictionsJob.hpp  cloud_main.cpp  main.cpp
examples/clock_example/: CMakeLists.txt  ClockJob.cpp  ClockJob.hpp  cloud_main.cpp  main.cpp  utils.hpp
examples/cuberenderer/: CMakeLists.txt  CubeJob.cpp  CubeJob.hpp  cloud_main.cpp  main.cpp  sockets_main.cpp
examples/fpsviewer/: CMakeLists.txt  FPSViewer.js  fpsviewer.md  fpsviewer_desktop.cpp  fpsviewer_job.hpp  fpsviewer_web.cpp
examples/jpg_proxy_test/: CMakeLists.txt  JPCJob.cpp  JPCJob.hpp  cloud_main.cpp  main.cpp
examples/simplejob/: CMakeLists.txt  TestJob.cpp  TestJob.hpp  cloud_main.cpp  main.cpp
examples/twocanvases/: CMakeLists.txt  TwoJob.cpp  TwoJob.hpp  cloud_main.cpp  main.cpp
js/: CMakeLists.txt  CMakeLists.txt~  INSTALL  build.profile.js  compile.sh  config.js  getDojo.sh  index.html  main.js  resources.qrc
js/css/: text.css
js/gui/: Canvas.js  CheckBoxWithLabel.js  GUIBuilder.js  GridLayout.js  HorizontalLayout.js  ImageReceiver.js  Label.js  ProxyModel.js  ProxyModelCoverageAngles.js  ProxyModelCoverageGrid.js  ProxyModelCoverageReplaceFarthestAway.js  ProxyModelCoverageReplaceOldest.js  ProxyModelCoverageReplaceOldestWhenDifferent.js  ProxyRenderer.js  RadioButtonWithLabel.js  SnapshotTimings.js  TrackBallViewer.js  VerticalLayout.js  autoProxy.fs  autoProxy.vs
js/model/: ExposedModel.js  ExposedModelParser.js  ExposedModelReceiver.js  ExposedModelSender.js  URLHandler.js  layer.js
js/modellib/: ExposedModel.js  ExposedModelBuilder.js  ExposedModelParser.js  ExposedModelReceiver.js  Logger.js  layer.js
js/policylib/: Logger.js  PolicyBuilder.js  PolicyLib.js  PolicyParser.js  PolicyReceiver.js  PolicySender.js  URLHandler.js  layer.js
js/renderlist/: RenderList.js  RenderListParser.js  RenderListRenderer.js
js/shared/: DSRV.js  console.js  includes.txt  utils.js
js/test/: modellib.js  policylib.js
js/xml/: getExposedModelUpdate.xml  getRenderList.xml  updateState.xml
sample_project/: CMakeLists.txt
sample_project/include/: MyJob.hpp
sample_project/src/: MyJob.cpp  main_desktop.cpp  main_web.cpp
src/ipc/: CMakeLists.txt  ipc_msg_client.c  ipc_msg_common.c  ipc_msg_internal.h  ipc_msg_server.c  ipc_util.c  messenger.c  messenger_client.c  messenger_server.c
src/jobcontroller/: CMakeLists.txt  ComputeJob.cpp  Controller.cpp  Job.cpp  OpenGLJob.cpp
src/jobobserver/: CMakeLists.txt  ComputeJob.cpp  Job.cpp  Observer.cpp  OpenGLJob.cpp
src/lib_trell/: CMakeLists.txt  ComputeJob.cpp  IPCGLJobObserver.cpp  IPCJobObserver.cpp  IPCObserver.cpp  messenger.c
src/librenderlist/: Buffer.cpp  CMakeLists.txt  DataBase.cpp  RenderList.cpp  SetUniforms.cpp  XMLWriter.cpp
src/librenderlistgl/: CMakeLists.txt  RenderBuffer.cpp  RenderDraw.cpp  RenderSetInputs.cpp  RenderSetShader.cpp  RenderSetUniforms.cpp  RenderShader.cpp  RenderState.cpp  Renderer.cpp  Utils.cpp  Utils.hpp
src/mod_trell/: CMakeLists.txt  filter_validate_xml.c  mod_trell.c  mod_trell.h  mod_trell_job.c  mod_trell_ops.c  mod_trell_reply.c  mod_trell_scrapheap.c  mod_trell_send_bmp.c  mod_trell_send_file.c  mod_trell_send_png.c  mod_trell_send_xml.c  mod_trell_url_decode.c  mod_trell_util.c  pass_query.c  pass_reply.c  pass_reply_javascript.c  pass_reply_jpg.c  pass_reply_png.c  pass_reply_xml.c
src/model/: CMakeLists.txt  ElementData.cpp  ExposedModel.cpp  ExposedModelLock.cpp  File.cpp  StateElement.cpp  StateListener.cpp  StateListenerHandler.cpp  StateSchemaElement.cpp  StateSchemaListener.cpp  StateSchemaListenerHandler.cpp  utils.cpp  validateGUI.cpp
src/modelxml/: CMakeLists.txt  ElementHandler.cpp  PugiXMLBuilder.cpp  PugiXMLReader.cpp  XMLBuilder.cpp  XMLHandler.cpp  XMLReader.cpp  XMLTransporter.cpp  utils.cpp
src/policy/: CMakeLists.txt  ElementData.cpp  File.cpp  Policy.cpp  PolicyLock.cpp  StateElement.cpp  StateListener.cpp  StateListenerHandler.cpp  StateSchemaElement.cpp  StateSchemaListener.cpp  StateSchemaListenerHandler.cpp  utils.cpp
src/policylib/: CMakeLists.txt  ElementData.cpp  File.cpp  PolicyLib.cpp  PolicyLock.cpp  StateElement.cpp  StateListener.cpp  StateListenerHandler.cpp  StateSchemaElement.cpp  StateSchemaListener.cpp  StateSchemaListenerHandler.cpp  utils.cpp
src/policylibxml/: CMakeLists.txt  ElementHandler.cpp  XMLBuilder.cpp  XMLHandler.cpp  XMLReader.cpp  XMLTransporter.cpp  utils.cpp
src/policyxml/: CMakeLists.txt  ElementHandler.cpp  XMLBuilder.cpp  XMLHandler.cpp  XMLReader.cpp  XMLTransporter.cpp  utils.cpp
src/qtcontroller/: Button.cpp  CMakeLists.txt  Canvas.cpp  CheckBox.cpp  ComboBox.cpp  DoubleSpinBox.cpp  ElementGroup.cpp  EnabledController.cpp  ExposedModelReceiver.cpp  FileDialogButton.cpp  GUIBuilder.cpp  HTTPServer.cpp  HorizontalSlider.cpp  Interrupter.cpp  Invoker.cpp  LongPollHandler.cpp  MainWindow.cpp  OpenGLServerGrabber.cpp  PopupEventFilter.cpp  QTController.cpp  RadioButton.cpp  RadioButtonGroup.cpp  RadioButtons.cpp  ServerController.cpp  ServerThread.cpp  SpinBox.cpp  StringController.cpp  TabWidgetChildren.cpp  TiniaProtoBuf.pb.cc  VisibilityController.cpp  http_utils.cpp  resources.qrc  synchronous_http_get.cpp  utils.cpp
src/qtobserver/: Button.cpp  CMakeLists.txt  Canvas.cpp  CheckBox.cpp  ComboBox.cpp  DoubleSpinBox.cpp  ElementGroup.cpp  EnabledController.cpp  FileDialogButton.cpp  GUIBuilder.cpp  HorizontalSlider.cpp  MainWindow.cpp  PopupEventFilter.cpp  QTObserver.cpp  RadioButton.cpp  RadioButtonGroup.cpp  RadioButtons.cpp  SpinBox.cpp  StringController.cpp  TabWidgetChildren.cpp  VisibilityController.cpp  utils.cpp
src/renderlist/: Buffer.cpp  CMakeLists.txt  DataBase.cpp  RenderList.cpp  SetUniforms.cpp  XMLWriter.cpp
src/renderlistgl/: CMakeLists.txt  RenderBuffer.cpp  RenderDraw.cpp  RenderSetInputs.cpp  (+7 more)
(+577 files in other folders)
